--- a/src/Components/BackgroundLayerChooser/BackgroundLayerChooser.less
+++ b/src/Components/BackgroundLayerChooser/BackgroundLayerChooser.less
@@ -1,14 +1,60 @@
 .bg-layer-chooser {
+  position: absolute;
+  bottom: 20px;
+  right: 5px;
+  z-index: 10;
+
   display: flex;
   align-items: center;
   justify-content: flex-end;
 
-  &.moved {
-    transition: 400ms;
+  .layer-cards {
+    display: flex;
+    gap: 10px;
+    padding: 5px;
+    background-color: #fff;
+    border: solid 1px #808080;
+    border-radius: 4px;
   }
 
-  .layer-cards {
-    overflow: hidden;
+  .no-background {
+    cursor: pointer;
+    margin: auto 0;
+    width: 128px;
+    height: 128px;
+    position: relative;
+
+    &:hover {
+      outline: 2px solid #2f4f4f;
+    }
+
+    .no-background-preview {
+      padding: 5%;
+      padding-bottom: 25px;
+      height: 100%;
+      width: 100%;
+    }
+
+    .layer-title {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      background: #fff;
+      color: #000;
+      text-align: center;
+      width: 100%;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      padding: 0 4px;
+    }
+
+    &.selected {
+      span.layer-title {
+        outline: 2px solid #2f4f4f;
+        font-weight: bold;
+      }
+    }
   }
 
   .bg-preview {
@@ -16,40 +62,25 @@
     width: 140px;
     height: 140px;
 
-    span.layer-title {
-      position: absolute;
-      bottom: 0;
-      margin: 5px;
-      background: var(--ant-primary-color);
-      color: #fff;
-      font-weight: bolder;
-      text-align: center;
-      width: 128px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      padding: 0 4px;
-    }
-
     #overview-map {
+      height: 100%;
+      width: 100%;
+
       .react-util-bg-layer-chooser-overviewmap {
-        bottom: unset;
-        left: unset;
-        right: unset;
-        top: unset;
-        border: solid 1px var(--ant-primary-color);
+        height: 100%;
+        width: 100%;
+        border: solid 1px #808080;
         border-radius: 4px;
         box-shadow: 0 6px 12px rgb(0 0 0 / 18%), 0 -6px 12px rgb(0 0 0 / 18%);
-        background-color: var(--ant-primary-1);
+        background-color: #fff;
 
         .ol-overviewmap-map {
           border: none;
-          width: 128px;
-          height: 128px;
+          width: 100%;
+          height: 100%;
 
-          canvas {
-            width: 128px;
-            height: 128px;
+          .ol-viewport {
+            border-radius: 4px;
           }
         }
 
@@ -58,13 +89,39 @@
           outline: 2px solid blue;
         }
         .ol-overviewmap-box:before {
-          content: " ";
+          content: ' ';
           position: absolute;
-          outline: 2px dashed white;
+          outline: 2px dashed #fff;
           width: 100%;
           height: 100%;
         }
       }
+    }
+
+    .no-background-preview {
+      border: solid 1px #808080;
+      border-radius: 4px;
+      box-shadow: 0 6px 12px rgb(0 0 0 / 18%), 0 -6px 12px rgb(0 0 0 / 18%);
+      background-color: #fff;
+      padding: 5%;
+      padding-bottom: 25px;
+      height: 100%;
+      width: 100%;
+    }
+
+    span.layer-title {
+      position: absolute;
+      bottom: 1px;
+      left: 1px;
+      background:rgba(255, 255, 255, 0.8);
+      border-radius: 0 0 4px 4px;
+      color: #000;
+      font-weight: bolder;
+      text-align: center;
+      width: calc(100% - 2px);;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 
@@ -72,16 +129,15 @@
     width: 22px;
     height: 64px;
     z-index: 3;
-    border: 1px solid var(--ant-primary-color);
+    border: 1px solid #808080;
     // suppress border on hover and focus
     border-right: none !important;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
+    border-radius: 0;
 
     &.toggled {
-      border-radius: 0;
       border-left: none;
     }
   }
-
 }
